tests/compileerror.php.expectf
Caught exception 'Sass\SassException' with message 'property "asd" must be followed by a ':'' in %s/tests/compileerror.php:10
Source File: stdin
Source Line: 4
Source Column: 9
Full message:
Error: property "asd" must be followed by a ':'
        on line 4 of stdin
>>         asd
   --------^

Stack trace:
#0 %s/tests/compileerror.php(10): Sass\Sass->compile()
#1 %s/tests/compileerror.php(33): Sass\testCompileErrorString()
#2 {main}

string(5) "stdin"
int(4)
int(9)
string(103) "Error: property "asd" must be followed by a ':'
        on line 4 of stdin
>>         asd
   --------^
"


Caught exception 'Sass\SassException' with message 'Undefined variable: "$iDoNotExist".' in %s/tests/compileerror.php:27
Source File: %s/tests/resources/scss/more/borked.scss
Source Line: 3
Source Column: 9
Full message:
Error: Undefined variable: "$iDoNotExist".
        on line 3 of tests/resources/scss/more/borked.scss
>> 	color: $iDoNotExist;
   --------^

Stack trace:
#0 (): Sass\Sass->compileFileNative()
#1 %s/tests/compileerror.php(27): Sass\Sass->compileFile()
#2 %s/tests/compileerror.php(34): Sass\testCompileErrorFile()
#3 {main}

